updated font references

--- a/app/assets/stylesheets/blocks/_buttons.scss
+++ b/app/assets/stylesheets/blocks/_buttons.scss
@@ -59,6 +59,6 @@
 }
 
 .btn:disabled {
-  background-color: tint-color($color-primary-background, 40%);
+  background-color: lighten($color-primary-background, 40%);
   border: none;
 }
