--- a/app/assets/stylesheets/blocks/_forms.scss
+++ b/app/assets/stylesheets/blocks/_forms.scss
@@ -17,5 +17,10 @@
 }
 
 .form-check-label {
-    padding-left: 5px;
+    padding-left: 2px;
+    font-weight: 400;
+}
+
+.form-check-label-bold {
+    font-weight: 700;
 }
