--- a/app/assets/stylesheets/blocks/_html.scss
+++ b/app/assets/stylesheets/blocks/_html.scss
@@ -71,10 +71,13 @@ legend {
 
 a {
   color: $color-link-text;
+  &:hover {
+    color: $color-link-hover-text;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
-  /* font-family: "GillSansLight"; */
+  font-family: "Cabin";
   color: $color-heading-text;
 }
 
@@ -91,6 +94,4 @@ https://github.com/twbs/bootstrap/pull/29793#issuecomment-1814683346
   text-align: justify;
   text-justify: inter-word;
 }
-
-
 
