--- a/app/assets/stylesheets/variables/_typography.scss
+++ b/app/assets/stylesheets/variables/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'GillSansLight';
-  src: url(asset-path('GillSans-Light.ttf')) format("truetype");
+  font-family: 'Cabin';
+  src: url('Cabin-Regular.ttf') format("truetype");
   font-weight: normal;
 }
 
