--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // Import locally defined variables. Load this before 'bootstrap'
-@use "variables";
+@import "variables";
 
 // Pull in the webpacker managed copy of Bootstrap Stylesheets
 @import "../../../node_modules/bootstrap/scss/bootstrap";
@@ -36,6 +36,5 @@ $fa-font-path: '.';
 @import "../../../node_modules/bootstrap/scss/containers";
 @import "../../../node_modules/bootstrap/scss/grid";
 
-//Importing customised stylesheets after Bootstrap defaults
 @import "blocks";
 @import "utils";
