--- a/app/views/layouts/_branding.html.erb
+++ b/app/views/layouts/_branding.html.erb
@@ -115,7 +115,7 @@
               <% end %>
               <% if current_user.can_super_admin? %>
                 <li class="nav-item <%= 'class=active' if active_page?(super_admin_api_clients_path) %>">
-                  <%= link_to _('Api Clients'), super_admin_api_clients_path, class: 'nav-link dropdown-item  px-3' %>
+                  <%= link_to _('API Clients'), super_admin_api_clients_path, class: 'nav-link dropdown-item  px-3' %>
                 </li>
                <li class="nav-item <%= 'class=active' if active_page?(super_admin_notifications_path) %>">
                   <%= link_to _('Notifications'), super_admin_notifications_path, class: 'nav-link dropdown-item  px-3' %>
