--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,9 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item"><%= link_to sanitize("&copy; 2004 - #{Time.now.year} #{Rails.configuration.x.organisation.name}"), "#{Rails.configuration.x.organisation.url}", class: 'nav-link' %></li>
-      <li class="nav-item">•</li>
+      <li class="nav-item">
+        <span style="line-height:40px;color:white;padding-left:15px;padding-right:15px;">•</span>
+      </li>
       <li class="nav-item"><a class="nav-link" href="<%= about_us_path %>"><%= _('About') %></a></li>
       <li class="nav-item"><a class="nav-link" href="<%= contact_us %>"><%= _('Contact us') %></a></li>
       <li class="nav-item"><a class="nav-link" href="<%= terms_path %>"><%= _('Terms of use') %></a></li>
@@ -17,12 +19,6 @@
       <li class="nav-item"><a class="nav-link" href="https://github.com/DMPRoadmap/roadmap"><%= _('GitHub') %></a></li>
     </ul>
     <ul class="navbar-nav navbar-right">
-      <li class="nav-item">
-        <%= link_to("http://www.cdlib.org/services/uc3/", title: "University of California Curation Center", target: '_blank', class: 'nav-link has-new-window-popup-info')  do %>
-          <%= image_tag("uc3_logo_white.png", class: "img-fluid", alt: 'University of California Curation Center (opens in a new window)') %>
-          <span class="new-window-popup-info"><%= _('Opens in new window') %></span>
-        <% end %>
-      </li>
       <li class="nav-item">
         <%= link_to("http://www.dcc.ac.uk/", title: "Digital Curation Centre", target: '_blank', class: 'nav-link has-new-window-popup-info')  do %>
           <%= image_tag("dcc_logo_white.png", class: "img-fluid", alt: 'Digital Curation Centre (opens in a new window)') %>
