--- a/app/views/org_admin/conditions/_webhook_form.html.erb
+++ b/app/views/org_admin/conditions/_webhook_form.html.erb
@@ -9,25 +9,25 @@
       <div class="modal-body mx-3">
         <div class="md-form mb-5 prefix grey-text">
           <i class="fa-solid fa-user"></i>
-          <%= label_tag name_start + "[webhook-name]", _('Name'), {'data-error': 'wrong', 'data-success': 'right', class: 'form-label', "aria-required": true, required: true} %>
+          <%= label_tag name_start + "[webhook-name]", _('Name'), {'data-error': 'wrong', 'data-success': 'right', class: 'form-label'} %>
           <%= text_field_tag name_start + "[webhook-name]", nil, class: 'form-control validate' %>
         </div>
 
         <div class="md-form mb-5 prefix grey-text">
         <i class="fa-solid fa-envelope"></i> <!-- mdbootstrap should have treatment for bad input for this -->
-          <%= label_tag name_start + "[webhook-email]", _('Email'), {'data-error': 'wrong', 'data-success': 'right', class: 'form-label', "aria-required": true, required: true} %>
+          <%= label_tag name_start + "[webhook-email]", _('Email'), {'data-error': 'wrong', 'data-success': 'right', class: 'form-label'} %>
           <%= email_field_tag name_start + "[webhook-email]", nil, { placeholder: _('recipient_email@example.com'), class: 'form-control validate'} %>
         </div>
 
         <div class="md-form mb-5 prefix grey-text">
           <i class="fa-solid fa-tag"></i>
-          <%= label_tag name_start + "[webhook-subject]", _('Subject'), {'data-error': 'wrong', 'data-success': 'right', class: 'form-label', "aria-required": true, required: true} %>
+          <%= label_tag name_start + "[webhook-subject]", _('Subject'), {'data-error': 'wrong', 'data-success': 'right', class: 'form-label'} %>
           <%= text_field_tag name_start + "[webhook-subject]", nil, class: 'form-control validate' %>
         </div>
 
         <div class="md-form prefix grey-text">
           <i class="fa-solid fa-pencil"></i>
-          <%= label_tag name_start + "[webhook-message]", _('Message'), {'data-error': 'wrong', 'data-success': 'right', class: 'form-label', "aria-required": true, required: true}%>
+          <%= label_tag name_start + "[webhook-message]", _('Message'), {'data-error': 'wrong', 'data-success': 'right', class: 'form-label'} %>
           <%= text_area_tag name_start + "[webhook-message]", nil, { placeholder: _('Email content'), class: 'form-control md-textarea', rows: 4 } %>
         </div>
       </div>
