--- a/app/views/org_admin/phases/_overview.html.erb
+++ b/app/views/org_admin/phases/_overview.html.erb
@@ -1,5 +1,5 @@
 <br>
-<h2><%= _('Template Overview') %></h2>
+<h2><%= _('Template overview') %></h2>
 <%= render partial: "org_admin/phases/phase",
            collection: phases,
            locals: { template: template,
