--- a/app/views/org_admin/phases/container.html.erb
+++ b/app/views/org_admin/phases/container.html.erb
@@ -1,7 +1,7 @@
 <% title "#{template.title}" %>
 <% modifiable = template.latest? && !template.customization_of.present? && template.id.present? && (template.org_id = current_user.org.id) %>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 mb-2">
     <h1><%= template.title %></h1>
     <% referrer = template.customization_of.present? ? customisable_org_admin_templates_path : organisational_org_admin_templates_path %>
     <%= link_to _('View all templates'), referrer, class: 'btn btn-secondary float-end' %>
