--- a/app/views/org_admin/users/edit.html.erb
+++ b/app/views/org_admin/users/edit.html.erb
@@ -31,7 +31,7 @@
         <%= f.label(:department_id, _('Department or school'), class: 'form-label') %>
         <%= select_tag(:department_id,
             options_from_collection_for_select(@departments, "id", "name", dept_id),
-            include_blank: true,
+            prompt: _("--Select--"),
             class: "form-select",
             name: 'user[department_id]') %>
       </div>
@@ -44,7 +44,8 @@
           <%= select_tag(:org_admin_user_language_id,
               options_from_collection_for_select(Language.sorted_by_abbreviation, "id", "name", lang_id),
               disabled: true,
-              class: "form-select", name: 'org_admin_user[language_id]') %>
+              prompt: _("--Select--"),
+              class: "form-select", name: 'org_admin_user[language_id]', "aria-required": true) %>
         </div>
       <% end %>
 
