removed margin-bottom

--- a/app/views/orgs/_profile_form.html.erb
+++ b/app/views/orgs/_profile_form.html.erb
@@ -20,13 +20,13 @@
                } %>
   <% else %>
     <div class="row">
-      <div class="form-control mb-3 col-sm-8">
+      <div class="form-control col-sm-8">
         <%= f.label :name, _('Organisation full name'), class: "form-label" %>
         <%= f.text_field :name, id: "org_name", class: "form-control", "aria-required": true %>
       </div>
     </div>
     <div class="row">
-      <div class="form-control mb-3 col-sm-8">
+      <div class="form-control col-sm-8">
         <%= f.label :abbreviation, _('Organisation abbreviated name'), class: "form-label" %>
         <%= f.text_field :abbreviation, id: "org_abbreviation", class: "form-control" %>
       </div>
@@ -35,7 +35,7 @@
 
   <% if current_user.can_super_admin? %>
     <div class="row">
-      <div class="form-control mb-3 col-sm-8">
+      <div class="form-control col-sm-8">
         <%= f.label :managed do %>
           <%= f.check_box :managed, id: "org_managed", "aria-required": true,
                 title: _("A managed Org is one that can have its own Guidance and/or Templates. An unmanaged Org is one that was automatically created by the system when a user entered/selected it.") %>
@@ -50,7 +50,7 @@
      end %>
 
   <div class="row">
-    <div class="form-control mb-3 col-sm-8">
+    <div class="form-control col-sm-8">
       <%= f.label :logo, _('Organization logo'), class: "form-label"  %>
 
       <% if org.logo.present? %>
@@ -90,12 +90,12 @@
   <hr>
 
   <div class="row">
-    <div class="form-control mb-3 col-sm-8">
+    <div class="form-control col-sm-8">
       <h3><%= _("Help Desk email") %></h3>
     </div>
   </div>
   <div class="row">
-    <div class="form-control mb-3 col-sm-4">
+    <div class="form-control col-sm-4">
       <%= f.label :helpdesk_email, _('Help Desk email'), class: "form-label" %>
       <%= f.email_field :helpdesk_email, class: "form-control" %>
     </div>
@@ -104,29 +104,33 @@
   <hr>
 
   <div class="row">
-    <div class="form-control mb-3 col-sm-8">
+    <div class="form-control col-sm-8">
       <h3><%= _("Administrator contact") %></h3>
     </div>
   </div>
   <div class="row">
-    <div class="form-control mb-3 col-sm-4">
-      <%= f.label :contact_email, _('Contact email'), class: "form-label" %>
-      <%= f.email_field :contact_email, class: "form-control", aria: { required: true } %>
+    <div class="col-sm-4">
+      <div class="form-control">
+        <%= f.label :contact_email, _('Contact email'), class: "form-label" %>
+        <%= f.email_field :contact_email, class: "form-control", aria: { required: true } %>
+      </div>
     </div>
-    <div class="form-control mb-3 col-sm-4">
-      <%= f.label :contact_name, _('Link text'), class: "form-label" %>
-      <%= f.text_field :contact_name, class: "form-control", aria: { required: true } %>
+    <div class="col-sm-4">
+      <div class="form-control">
+        <%= f.label :contact_name, _('Link text'), class: "form-label" %>
+        <%= f.text_field :contact_name, class: "form-control", aria: { required: true } %>
+      </div>
     </div>
   </div>
 
   <hr>
   <div class="row">
-    <div class="form-control mb-3 col-sm-8">
+    <div class="form-control accessibility-issue--infocol-sm-8">
       <h3><%= _("Google Analytics Tracker") %></h3>
     </div>
   </div>
   <div class="row">
-    <div class="form-control mb-3 col-sm-4">
+    <div class="form-control col-sm-4">
       <%= f.fields_for :tracker do |t| %>
         <%= t.label :code, _('Tracker Code'), class: "form-label" %>
         <%= t.text_field :code, class: "form-control", aria: { required: false } %>
@@ -181,6 +185,27 @@
     <% end %>
   </div>
 
+<hr>  
+
+<%# Organisation Permissions block where super admin can add: 
+  -  Question Identifiers
+  %>
+  <div class="row">
+    <% if current_user.can_super_admin? %>
+      <fieldset class="col-sm-8">
+        <h3>
+          <%= _('Organisation Permissions') %>
+        </h3>
+        <div class="checkbox">
+          <%= f.label :add_question_identifiers do %>
+            <%= f.check_box :add_question_identifiers, { class: 'org_types', value: org.add_question_identifiers?  }, "true", "false" %>
+            <%= _('Question Identifiers - Permission to add identifiers to a new/published template. Which will be displayed when APIv0 is called') %>
+          <% end %>
+        </div>
+      </fieldset>
+    <% end %>
+  </div>
+
   <hr>
 
   <% if !org.new_record? %>
@@ -193,7 +218,7 @@
   <% end %>
 
   <div class="row">
-    <div class="form-control mb-3 col-sm-8">
+    <div class="form-control col-sm-8">
       <%= f.button(_('Save'), id:"save_org_details_submit", class: "btn btn-primary", type: "submit") %>
     </div>
   </div>
