--- a/app/views/paginable/orgs/_index.html.erb
+++ b/app/views/paginable/orgs/_index.html.erb
@@ -3,8 +3,8 @@
     <thead>
       <tr>
         <th scope="col"><%= _('Organisation') %>&nbsp;<%= paginable_sort_link('orgs.name') %></th>
-        <th scope="col"><%= _('Administrator Email') %>&nbsp;<%= paginable_sort_link('orgs.contact_email') %></th>
-        <th scope="col"><%= _('Organisation Type(s)') %>&nbsp;<%= paginable_sort_link('orgs.org_type') %></th>
+        <th scope="col"><%= _('Administrator email') %>&nbsp;<%= paginable_sort_link('orgs.contact_email') %></th>
+        <th scope="col"><%= _('Organisation type(s)') %>&nbsp;<%= paginable_sort_link('orgs.org_type') %></th>
         <th scope="col"><%= _('Templates') %></th>
         <th scope="col"><%= _("Managed") %>&nbsp;<%= paginable_sort_link('orgs.managed') %></th>
         <th scope="col" class="sorter-false"><span aria-hidden="false" class="sr-only"><%= _('Actions') %></span></th>
