--- a/app/views/paginable/plans/_index.html.erb
+++ b/app/views/paginable/plans/_index.html.erb
@@ -2,7 +2,7 @@
   <table class="table table-hover" id="my-plans">
     <thead>
       <tr>
-        <th scope="col"><%= _('Project Title') %>&nbsp;<%= paginable_sort_link('plans.title') %></th>
+        <th scope="col"><%= _('Project title') %>&nbsp;<%= paginable_sort_link('plans.title') %></th>
         <th scope="col"><%= _('Template') %>&nbsp;<%= paginable_sort_link('templates.title') %></th>
         <th scope="col"><%= _('Organisation') %></th>
         <th scope="col"><%= _('Owner') %></th>
