--- a/app/views/paginable/plans/_organisationally_or_publicly_visible.html.erb
+++ b/app/views/paginable/plans/_organisationally_or_publicly_visible.html.erb
@@ -6,7 +6,7 @@
           <thead>
             <tr>
               <th scope="col">
-                <%= _('Project Title') %>&nbsp;
+                <%= _('Project title') %>&nbsp;
                 <%= paginable_sort_link('plans.title') %>
               </th>
               <th scope="col">
