--- a/app/views/paginable/templates/_index.html.erb
+++ b/app/views/paginable/templates/_index.html.erb
@@ -2,10 +2,10 @@
   <table class="table table-hover table-bordered">
     <thead>
       <tr>
-        <th scope="col"><%= _('Template Name') %>&nbsp;<%= paginable_sort_link('templates.title') %></th>
+        <th scope="col"><%= _('Template name') %>&nbsp;<%= paginable_sort_link('templates.title') %></th>
         <th scope="col"><%= _('Organisation') %>&nbsp;<%= paginable_sort_link('orgs.name') %></th>
         <th scope="col"><%= _('Status') %></th>
-        <th scope="col" class="date-column"><%= _('Edited Date') %>&nbsp;<%= paginable_sort_link('templates.updated_at') %></th>
+        <th scope="col" class="date-column"><%= _('Edited date') %>&nbsp;<%= paginable_sort_link('templates.updated_at') %></th>
       </tr>
     </thead>
     <tbody>
