--- a/app/views/paginable/templates/_organisational.html.erb
+++ b/app/views/paginable/templates/_organisational.html.erb
@@ -5,14 +5,14 @@
   <table class="table table-hover table-bordered">
     <thead>
       <tr>
-        <th scope="col"><%= _('Template Name') %>&nbsp;<%= paginable_sort_link('templates.title') %></th>
+        <th scope="col"><%= _('Template name') %>&nbsp;<%= paginable_sort_link('templates.title') %></th>
         <% if action_name == 'organisational' %>
           <th scope="col"><%= _('Description') %>&nbsp;<%= paginable_sort_link('templates.description') %></th>
         <% else %>
           <th scope="col"><%= (action_name == 'customizable' ? _('Funder') : _('Organisation')) %>&nbsp;<%= paginable_sort_link('orgs.name') %></th>
         <% end %>
         <th scope="col"><%= _('Status') %></th>
-        <th scope="col" class="date-column"><%= _('Edited Date') %>&nbsp;<%= paginable_sort_link('templates.updated_at') %></th>
+        <th scope="col" class="date-column"><%= _('Edited date') %>&nbsp;<%= paginable_sort_link('templates.updated_at') %></th>
         <% if action_name != 'index' %>
           <th scope="col">&nbsp;</th>
         <% end %>
