--- a/app/views/paginable/templates/_publicly_visible.html.erb
+++ b/app/views/paginable/templates/_publicly_visible.html.erb
@@ -3,14 +3,14 @@
   <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col"><%= _('Template Name') %>&nbsp;<%= paginable_sort_link('templates.title') %></th>
+        <th scope="col"><%= _('Template name') %>&nbsp;<%= paginable_sort_link('templates.title') %></th>
         <th scope="col" class="sorter-false text-center download-column"><%= _('Download') %></th>
-        <th scope="col"><%= _('Organisation Name') %>&nbsp;<%= paginable_sort_link('orgs.name') %></th>
-        <th scope="col" class="date-column"><%= _('Last Updated') %>&nbsp;<%= paginable_sort_link('templates.updated_at') %></th>
-        <th scope="col" class="sorter-false"><%= _('Funder Links') %></th>
+        <th scope="col"><%= _('Organisation name') %>&nbsp;<%= paginable_sort_link('orgs.name') %></th>
+        <th scope="col" class="date-column"><%= _('Last updated') %>&nbsp;<%= paginable_sort_link('templates.updated_at') %></th>
+        <th scope="col" class="sorter-false"><%= _('Funder links') %></th>
         <th><%= _('Create a new plan') %></th>
         <th scope="col" class="sorter-false" data-toggle="tooltip" title="<%= sample_plans_tooltip %>">
-          <%= _('Sample Plans') %><br><small><%= _('(if available)') %></small>
+          <%= _('Sample plans') %><br><small><%= _('(if available)') %></small>
           <em class="sr-only"><%= sample_plans_tooltip %></em>
         </th>
       </tr>
