--- a/app/views/plans/_project_details.html.erb
+++ b/app/views/plans/_project_details.html.erb
@@ -17,10 +17,11 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
                                 'data-toggle': 'tooltip', spellcheck: true,
                                 title: project_title_tooltip) %>
   </div>
+
   <div class="col-lg-8">
     <div class="form-check">
       <%= form.hidden_field :visibility %>
-      <%= form.label(:is_test, class: 'form-label') do %>
+      <%= form.label(:is_test, class: 'form-check-label') do %>
         <%= check_box_tag(:is_test, 1, plan.is_test?, "aria-label": "is_test") %>
         <%= _('mock project for testing, practice, or educational purposes') %>
       <% end %>
@@ -47,7 +48,7 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
       <% options = research_domains.map { |rd| [rd.label, rd.id] } %>
       <%= form.select :research_domain_id, options_for_select(options, form.object.research_domain_id),
                             {
-                              include_blank: _("- Please select one -"),
+                              prompt: _("--Select--"),
                               selected: form.object.research_domain_id
                             },
                             { class: "form-select" } %>
@@ -168,7 +169,7 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
      <% funding_statuses = Plan::FUNDING_STATUS.map { |status| [_(status[0].to_s.capitalize), _(status[0].to_s)] } %>
     <%= form.select :funding_status, options_for_select(funding_statuses, form.object.funding_status),
                             {
-                              include_blank: _("- Please select one -"),
+                              prompt: _("--Select--"),
                               selected: form.object.funding_status
                             },
                             { class: "form-select" } %>
@@ -179,22 +180,9 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
       </div>
 
       <div class="col-lg-8">
-        <%# If the OpenAire grant typeahead if enabled use it %>
-        <% if Rails.configuration.x.open_aire.active %>
-          <!-- Using the research_project.json source for typeahead -->
-          <%= grant_fields.text_field :name,
-                                      value: plan.grant&.value,
-                                      class: "form-control grant-id-typeahead",
-                                      spellcheck: true,
-                                      autocomplete: "off",
-                                      aria: { required: false } %>
-          <%= grant_fields.hidden_field :value %>
-          <span class="text-muted" id="grant_number_info"><%= _("Grant number:") -%> <%= plan.grant&.value %></span>
-        <% else %>
           <%= grant_fields.text_field(:value, class: "form-control",
                                             data: { toggle: "tooltip" },
                                             title: _("Provide a URL to the award's landing page if possible, if not please provide the award/grant number.")) %>
-        <% end %>
       </div>
     <% end %>
   </div>
