--- a/app/views/plans/_share_form.html.erb
+++ b/app/views/plans/_share_form.html.erb
@@ -57,6 +57,7 @@
     <tbody>
       <% @plan_roles.each do |role| %>
         <tr>
+        <% if role.user.present? %>
           <td><%= role.user.name %></td>
           <td>
             <% if role.creator? %>
@@ -72,7 +73,7 @@
                       ] %>
                       <%= f.select :access, options_for_select(options, role.access), {}, {
                                             authenticity_token: true,
-                                            class: "toggle-existing-user-access",
+                                            class: "form-select toggle-existing-user-access",
                                             data: {
                                               remote: true,
                                               method: :patch,
@@ -91,6 +92,7 @@
                 <%= link_to _('Remove'), role, method: :delete, data: { confirm: _('Are you sure?') }, :class => "a-orange" %>
               <% end %>
             </td>
+          <% end %>
           <% end %>
         </tr>
       <% end %>
@@ -124,19 +126,19 @@
       <%= content_tag :legend , _('Permissions') %>
       <div class="form-control mb-3">
         <div class="form-check">
-          <%= f.label :administrator_access do %>
+          <%= f.label :administrator_access, class:'form-check-label' do %>
             <%= f.radio_button :access, administrator.access, id: "role_administrator_access", "aria-required": true, required: true %>
             <%= _('Co-owner') %>
           <% end %>
         </div>
         <div class="form-check">
-          <%= f.label :editor_access do %>
+          <%= f.label :editor_access, class:'form-check-label' do %>
             <%= f.radio_button :access, editor.access , id: "role_editor_access" %>
             <%= _('Editor') %>
           <% end %>
         </div>
         <div class="form-check">
-          <%= f.label :commenter_access do %>
+          <%= f.label :commenter_access, class:'form-check-label' do %>
             <%= f.radio_button :access, commenter.access, id: "role_commenter_access" %>
             <%= _('Read only') %>
           <% end %>
