--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -106,8 +106,7 @@
         <h2 id="template-selection"><%= _('Which DMP template would you like to use?') %></h2>
         <div class="form-control mb-3 row">
           <div class="col-md-6">
-            <%= select_tag(:plan_template_id, "<option value=\"\">#{_('Please select a template')}</option>", name: 'plan[template_id]',
-                           class: 'form-select', 'aria-labelledby': 'template-selection') %>
+            <%= select_tag :plan_template_id, options_for_select("", ""), name: 'plan[template_id]', class: 'form-select', 'aria-labelledby': 'template-selection' %>
           </div>
           <div class="col-md-6">
             <span id="multiple-templates">
